# ShaderBuilder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Examples/: CMakeLists.txt  Main.cpp  Profiler.cpp  Profiler.hpp
Include/ShaderBuilder/: Attribute.hpp  Builder.hpp  BuilderError.hpp  Callable.hpp  DataType.hpp  Function.hpp  FunctionBuilder.hpp  Input.hpp  InputStorage.hpp  InstructionStores.hpp  Output.hpp  Parameter.hpp  SPIRVBinary.hpp  SPIRVSource.hpp  TypeStorage.hpp  TypeTraits.hpp  Utilities.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  VertexBuilder.hpp
Include/ShaderBuilder/Storages/: InstructionStorage.hpp  UniqueInstructionStorage.hpp
Include/ShaderBuilder/Types/: Callable.hpp  DataType.hpp  TypeTraits.hpp  Uniform.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Source/: Builder.cpp  CMakeLists.txt  FunctionBuilder.cpp  InstructionStores.cpp  SPIRVBinary.cpp  SPIRVSource.cpp  Utilities.cpp  VertexBuilder.cpp
Source/Types/: DataType.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
Tests/: CMakeLists.txt  Main.cpp
Tests/Samples/: Shader.vert
